# src/swagger/swagger-output.json
@@ -143,10 +143,10 @@
         }
       }
     },
-    "/user/": {
+    "/users/": {
       "get": {
         "tags": [
-          "User"
+          "Users"
         ],
         "description": "",
         "responses": {
@@ -160,7 +160,7 @@
       },
       "post": {
         "tags": [
-          "User"
+          "Users"
         ],
         "description": "",
         "responses": {
@@ -173,10 +173,10 @@
         }
       }
     },
-    "/user/email/{email}": {
+    "/users/email/{email}": {
       "get": {
         "tags": [
-          "User"
+          "Users"
         ],
         "description": "",
         "parameters": [
@@ -202,10 +202,10 @@
         }
       }
     },
-    "/user/{id}": {
+    "/users/{id}": {
       "get": {
         "tags": [
-          "User"
+          "Users"
         ],
         "description": "",
         "parameters": [
@@ -229,7 +229,7 @@
       },
       "patch": {
         "tags": [
-          "User"
+          "Users"
         ],
         "description": "",
         "parameters": [
@@ -256,7 +256,79 @@
       },
       "delete": {
         "tags": [
-          "User"
+          "Users"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/threads/": {
+      "get": {
+        "tags": [
+          "Threads"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Threads"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateThreadDTO"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/threads/{id}": {
+      "get": {
+        "tags": [
+          "Threads"
         ],
         "description": "",
         "parameters": [
@@ -418,6 +490,38 @@
                   "type": {
                     "type": "string",
                     "example": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "CreateThreadDTO": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "example": "object"
+          },
+          "properties": {
+            "type": "object",
+            "properties": {
+              "content": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  }
+                }
+              },
+              "image": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "file"
                   }
                 }
               }
